After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 128166 - Inserting, appending and removing a sheet are ignored when quitting
Inserting, appending and removing a sheet are ignored when quitting
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: GUI
1.2.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-11-29 14:52 UTC by Evert Verhellen
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Evert Verhellen 2003-11-29 14:52:07 UTC
Steps:

 1. Press [Ctrl]+[N].
 2. Press [Shift]+[Ctrl]+[S].
 3. Press [Enter] to save as `Book1.gnumeric'.
 4. Right-click on `Sheet1' to display the pop-up menu.
 5. Click on either the `Insert', `Append' or `Remove' menu item.
 6. Press [Ctrl]+[Q].

Actual Results: Quits without warning message.
Expected Results: Display the `Warning' dialog.
Comment 1 Andreas J. Guelzow 2003-12-02 06:06:18 UTC
fixed in cvs