http://bugzilla.gnome.org/show_bug.cgi?id=128166 dirty workbook

2003-12-01  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=128166
	* src/commands.c (cmd_reorganize_sheets_undo): dirty workbook
	(cmd_reorganize_sheets_redo): ditto